fix layout overflow

--- a/src/table/table.stylesheet.css
+++ b/src/table/table.stylesheet.css
@@ -2,8 +2,7 @@
   position: relative;
 }
 .tc-table {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   border: 1px solid rgba(0, 0, 0, 0.1);
   overflow: auto;
 }
